Fix bug to make download buttons show up in vertical alignment (#698)

--- a/audius-client/packages/web/src/containers/track-page/components/mobile/TrackHeader.module.css
+++ b/audius-client/packages/web/src/containers/track-page/components/mobile/TrackHeader.module.css
@@ -227,7 +227,8 @@
   border-top: 1px solid var(--neutral-light-7);
   width: 100%;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   padding: 16px 0px;
 }
 
